# jottrace

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODOS.md  install.sh  package.json  season-unknown-design-20260501-224222.md
.codex/environments/: environment.toml
.github/workflows/: ci.yml  release.yml
docs/: backup-r2-rclone.md  design.md  grilling-pass-2026-05-02.md  processor-design.md  reader-source-inventory.md
docs/predecessor/: AI Work Journal.md
notes/: command-code-taste-formula.md  taste-extraction-plan.md
scripts/: check-version.sh
src/: cli.ts  compact.rs  errors.ts  ingest.rs  ledger.ts  lib.rs  lock.ts  main.rs  models.ts  storage.rs  sync.ts  transfer.rs  update.rs  web.rs
src/adapters/: base.ts  claude_code.ts  registry.ts
src/migrations/: 001_initial_schema.sql  002_ingest_error_recency_index.sql  003_claude_sidechain_source_ids.sql  004_unsupported_event_codec_index.sql  005_supported_zstd_codec_index.sql  006_raw_event_compaction_index.sql  007_session_source_file_path_index.sql  008_session_source_metadata.sql  009_session_prefix_fingerprint.sql  010_taste_extraction.sql  (+3 more)
src/taste/: mod.rs  (+8 more)
tests/: claude_code_adapter.test.ts  cli.rs  cli.test.ts  fixture_corpus.rs  frontmatter.test.ts  installer.rs  ledger.test.ts  lock.test.ts  regions.test.ts  smoke.test.ts  sync.test.ts  taste_compiler.rs  taste_export.rs  taste_extract.rs  taste_fixtures.rs  taste_parse.rs  taste_preference_examples.rs  taste_show_example.rs  taste_show_timeline.rs  taste_sidecar.rs  taste_status.rs  taste_timeline.rs  update.rs  version_policy.rs  web.rs
(+51 files in other folders)
