[package]
name = "jottrace"
version = "26.5.2"
edition = "2024"
license = "MIT"
description = "Preserve AI coding-session transcripts into a local journal"

[dependencies]
rusqlite = { version = "0.39.0", default-features = false, features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
