[package]
name = "jottrace"
version = "26.5.5"
edition = "2024"
license = "MIT"
description = "Preserve AI coding-session transcripts into a local journal"

[dependencies]
rusqlite = { version = "0.39.0", default-features = false, features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
zstd = { version = "0.13.3", default-features = false }
